--- a/templates/first.html
+++ b/templates/first.html
@@ -16,7 +16,7 @@
 <p>Im Folgenden finden Sie eine Liste von verschiedenen Ereignissen, die einem in seinem Leben zustoßen können. </p>
 <p>Bitte lesen Sie jeden Satz genau durch und stellen Sie sich vor, wie Sie sich genau in dieser Situation fühlen würden. Überlegen Sie bitte nicht erst, welche Antwort sinnvoll erscheint, sondern antworten Sie so, wie es für Sie persönlich zutrifft.</p>
 <p>Jede beschriebene Situation können Sie auf der Basis von vier Emotionen beurteilen: Scham, Schuld, Angst und Ärger. Empfinden Sie z.B. mehr Ärger in einer bestimmten Situation, oder Angst? Bitte beurteilen Sie jede beschriebene Situation auf der Basis der vier vorgegebenen Emotionen.</p> 
-<p>Zu guter Letzt bitten wir Sie anzukreuzen, ob die Vorstellung der Situation auf einer schon erlebten Erinnerung beruht (=autobiographisch ist) oder nicht.</p>
+<p>Zu guter Letzt bitten wir Sie anzukreuzen, ob die Vorstellung der Situation auf einer schon erlebten Erinnerung beruht (=autobiographisch) ist oder nicht.</p>
 
 Zur leichteren Unterscheidung der Kategorien, hier eine Definition: 
 <ul>
