--- a/templates/page.html
+++ b/templates/page.html
@@ -33,7 +33,7 @@
 					 <td align="right"><label>{{radio.choice_label}}</td><td align="left"><span class="radio">{{ radio.tag }}</span></td>
 				{% endfor %}
 		
-	<table>
+	</table>
 	{% for hid in form.hidden_fields %} {{hid}}{% endfor %} 
 	<hr>
 {% endfor %}
