--- a/templates/thanks.html
+++ b/templates/thanks.html
@@ -4,5 +4,6 @@
 
 {% block content %}
 <h1>Fragebogen zur den Emotionen Scham, Schuld, Angst und Ärger</h1>
-<h3>Vielen Dank fürs Mitmachen!</h3>
+<h3>Sie haben den Fragebogen nun erfolgreich beantwortet.</h3>
+<h3>Vielen Dank für die Mühe!</h3>
 {% endblock %}
